welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: '=' expected but ';' found.
	if (vacation) x==true	
^